Implements manage role